graph: use ChartRangeFilter for time range

--- a/lib/app_web/components/layouts/root.html.heex
+++ b/lib/app_web/components/layouts/root.html.heex
@@ -13,7 +13,7 @@
     </script>
 
     <script>
-      google.charts.load('current', {packages: ['corechart']});
+      google.charts.load('current', {packages: ['corechart', 'controls']});
 
       window.__APP__  = window.__APP__ || {}
 
