--- a/lib/app_web/components/layouts/root.html.heex
+++ b/lib/app_web/components/layouts/root.html.heex
@@ -14,6 +14,7 @@
 
     <script>
       google.charts.load('current', {packages: ['corechart', 'controls']});
+      google.charts.setOnLoadCallback(() => window.liveSocket.connect());
 
       window.__APP__  = window.__APP__ || {}
 
