Add behavior timeline

--- a/lib/app_web/components/layouts/root.html.heex
+++ b/lib/app_web/components/layouts/root.html.heex
@@ -13,7 +13,7 @@
     </script>
 
     <script>
-      google.charts.load('current', {packages: ['corechart', 'controls']});
+      google.charts.load('current', {packages: ['corechart', 'controls', 'timeline']});
       google.charts.setOnLoadCallback(() => window.liveSocket.connect());
 
       window.__APP__  = window.__APP__ || {}
